Layout issues fixed version 2.

--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3197,7 +3197,18 @@ media all and (min-width:1100px){
     right: -50px;
   }
 }
-
+#main-content {
+    .fixed-box {
+        .fix-box-inner {
+            .page-box-close {
+                position: absolute;
+                top: 7px;
+                right: 10px;
+                cursor: pointer;            
+            }
+        }
+    }
+}
 .fixed-box {
   position: fixed;
   top: 0;
@@ -3218,15 +3229,10 @@ media all and (min-width:1100px){
     padding: 0 50px;
 
     .page-box-close {
-      position: absolute;
-      top: 0;
-      right: -40px;
-      cursor: pointer;
-
-      img {
-        width: 30px;
-        height: 30px;
-      }
+        img {
+            width: 30px;
+            height: 30px;
+        }
     }
 
     .title {
@@ -3297,6 +3303,7 @@ media all and (min-width:1100px){
     font-size: 12px;
     line-height: 20px;
     padding: 0 90px;
+    margin-bottom: 6%;
   }
 
   .wrp-btn-close {
